adição de autenticação do discord

--- a/server/templates/main/home.html
+++ b/server/templates/main/home.html
@@ -10,6 +10,7 @@
 
     <!-- LINK PARA SALVAR O TOKEN NO DB -->
     <a href="/auth/github">Conectar Github</a>
+    <a href="/auth/discord">Conectar Discord</a>
 
 </body>
 </html>
