--- a/server/templates/main/home.html
+++ b/server/templates/main/home.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RepoLinkBot</title>
+    <title>Gerenciador - RepoLink</title>
 </head>
 <body>
-    <h1>HOME</h1>
-    
-    <!-- LINK PARA SALVAR O TOKEN NO DB -->
-    <a href="{{ url_for('auth_github') }}">Conectar Github</a>
-    <a href="{{ url_for('auth_discord') }}">Conectar Discord</a>
+
+    {% if logged_in %}
+
+        <h1>Olá, {{ user.username }}!</h1>
+        
+        <a href="https://github.com" target="_blank">GitHub</a>
+        <br>
+        <a href="https://trello.com" target="_blank">Trello</a>
+        <br><br>
+        <a href="{{ url_for('logout') }}">Logout</a>
+
+    {% else %}
+
+        <h1>HOME - REPOLINK</h1>
+        <a href="{{ url_for('login') }}">Login</a>
+        <br>
+        <a href="{{ url_for('login') }}">Cadastro</a>
+
+    {% endif %}
 
 </body>
 </html>
