--- a/server/templates/main/cadastro.html
+++ b/server/templates/main/cadastro.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Login - RepoLink</title>
+    <title>Cadastro - RepoLink</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Cadastro</h1>
 
     <form method="post" action="{{ url_for('login') }}">
         <label for="username">Usuário:</label><br>
@@ -13,7 +13,7 @@
 
         <label for="password">Senha:</label><br>
         <input type="password" id="password" name="password" required><br><br>
-
+        
         <input type="submit" value="Entrar">
     </form>
 </body>
