--- a/server/templates/main/login.html
+++ b/server/templates/main/login.html
@@ -5,6 +5,15 @@
     <title>Login - RepoLink</title>
 </head>
 <body>
+    
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <h1 class="flash-message {{ category }}">{{ message }}</h1>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     <h1>Login</h1>
 
     <form method="post" action="{{ url_for('login') }}">
