logica cadastro /db

--- a/server/templates/main/home.html
+++ b/server/templates/main/home.html
@@ -28,6 +28,7 @@
 
         <h1>HOME - REPOLINK</h1>
         <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ url_for('register') }}">Register</a>
 
     {% endif %}
 
