--- a/server/templates/main/login.html
+++ b/server/templates/main/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - RepoLink</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main/login.css')}}">
 </head>
 <body>
     {% with messages = get_flashed_messages(with_categories=true) %}
