--- a/server/templates/main/register.html
+++ b/server/templates/main/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register - RepoLink</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main/register.css') }}">
 </head>
 <body>
 
